# letscloud-mcp-server

./: .gitignore  CONFIGURACAO_COMPLETA.md  CONFIGURACAO_FINAL.md  CURSOR_SETUP.md  DEPLOY_GUIDE.md  DEPLOY_GUIDE_EN.md  LANGUAGE_SUPPORT.md  LICENSE  PUBLISH_GUIDE.md  QUICK_DEPLOY.md  QUICK_DEPLOY_EN.md  README.md  README_INDEX.md  README_PT.md  RELEASE_STATUS.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/api/routes/: client_routes.py
app/core/: __init__.py  config.py  letscloud_client.py  letscloud_config.py  mcp_config.py  processor.py
app/mcp/: processor.py  protocol.py
app/mcp/handlers/: letscloud_handler.py
app/models/: __init__.py  client.py  context.py
app/services/: __init__.py  client_service.py
examples/: AI_CONFIGURATION_EN.md  COMO_USAR_COM_IA.md  CONFIGURACAO_IA.md  CONVERSAS_EXEMPLOS.md  CONVERSATION_EXAMPLES_EN.md  HOW_TO_USE_WITH_AI_EN.md  README.md  README_EN.md
scripts/: deploy.sh  deploy_pt.sh
src/: __init__.py
src/letscloud_mcp_server/: __init__.py  __main__.py  http_server.py  letscloud_client.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_api.py  test_letscloud_client.py
